instructions and comments

--- a/baseCSS/src/index.html
+++ b/baseCSS/src/index.html
@@ -2192,6 +2192,15 @@
                 </ul>
               </div>
             </div>
+            <br />
+            <div class="row thinBorder"></div>
+            <br />
+            <div class="row noHorizontalMargins">
+              <a class="sideLinks" href="install.html">Instruções</a>
+            </div>
+            <div class="row noHorizontalMargins">
+              <a class="sideLinks" href="comments.html">Comentários</a>
+            </div>
           </div>
         </div>
       </div>
